--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 .slide-fade-leave-active {
 	transition: 0.5s ease;
 }
-/*body {
-	text-align: center;
-}*/
+body {
+	/*background-color: grey;*/
+	font-family: "Times New Roman";
+}
